tests/fixtures/invalid/int_le_dict.py
# Cannot compare with <= Int and Dict[str, int]
x: bool = 1 <= {"a": 1}
